<resources>
  <string name="app_name">Self Tracker</string>
  <string name="Login">Login</string>
  <string name="UserId">User ID</string>
  <string name="Password">Password</string>
  <string name="RegisterMessage">Please enter your credentials which you can use next time to login.</string>
  <string name="LoginMessage">Please login using your credentials which you had used during registration with the app.</string>
  <string name="passwordLessThanMinLength">Please enter a password having at least %1$d characters.</string>
  <string name="userIdLessThanMinLength">Please enter a user Id having at least %1$d characters.</string>
  <string name="login_failed">Login failed, please check your credentials.</string>
  <string name="weAreHere">We are here</string>
  <string name="installGooglePlayServices">Please make sure that Google play services are installed and enabled to continue using this app.</string>
  <string name="settings">Settings</string>
  <string name="permission_denied_explanation">Location permissions are required by this app to track you. Please grant again and launch this app again.</string>
  <string name="no_location_detected">No location detected</string>
  <string name="permission_rationale">Location permissions are required by this app to track you. Please grant them to use this app.</string>
  <string name="Register">Register</string>
  <string name="showOrHidePassword">Show or hide password</string>
  <string name="notification_message_location">Your location is: %1$f, %2$f</string>
  <string name="grantPermission">Grant premissions</string>
</resources>